--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -76,7 +76,7 @@
         </activity>
         <activity
             android:name=".SettingActivity"
-            android:label="Setting"
+            android:label="Pengaturan"
             android:parentActivityName=".MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -84,7 +84,7 @@
         </activity>
         <activity
             android:name=".HelpActivity"
-            android:label="Help"
+            android:label="Petunjuk"
             android:parentActivityName=".MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
